--- a/blog/writing-mathematics/index.qmd
+++ b/blog/writing-mathematics/index.qmd
@@ -7,31 +7,38 @@ author: David A. Smith
 date: 2023-01-28
 updated: 2023-01-30
 categories: Writing
+image: writing-mathematics-1024.jpeg
+image-alt: "Writing Mathematics How I Write Mathematics"
+description: "Writing Mathematics: How I Write Mathematics"
 abstract: Writing mathematics is a meaningful skill for people of all ages to learn and understand. It requires considerable focus, such as understanding concepts with specialized language and notation. Writing mathematics can be difficult, but it is worth pursuing because it helps people comprehend complex ideas and prepares them for advancing their own.
 citation:
   url: https://directknowledge.com/blog/writing-mathematics/
   publisher: "Direct Knowledge"
 keywords: ["mathematics", "writing"]
+keyword: mathematics writing 
 format:
   html:
     toc: true
     number-sections: true
     number-depth: 2
-    #include-in-header: 
-      #- ../../../_schema/breadcrumbs.html
-      #- ../../../_schema/article.html
+    include-in-header: 
+      - ../_html/breadcrumbs.html
+      - ../_html/article.html
     output-file: index.html
   pdf:
+    documentclass: article
+    papersize: letter
+    fontsize: 12pt
     cite-method: biblatex
     pdf-engine: pdflatex
-    toc: true
-    number-sections: true
+    toc: false
+    number-sections: false
     colorlinks: false
     output-file: writing-mathematics.pdf
-    #include-in-header:
-      #- ../../../_tex/packages.tex
-    #include-after-body: 
-      #- ../../../_tex/bib.qmd
+    include-in-header:
+      - ../_tex/packages.tex
+    include-after-body: 
+      - ../_tex/footer.tex
   latex:
     toc: true
     number-sections: true
@@ -45,7 +52,7 @@ format:
 bibliography: ../references.bib
 ---
 ::: {.content-visible when-format="html" .d-print-none }
-![Writing Mathematics: How I Write Mathematics](writing-mathematics-1024.jpeg)
+![](writing-mathematics-1024.jpeg){fig-alt="Writing Mathematics: How I Write Mathematics"}
 :::
 
 ## What Makes Writing Mathematics Different?
