--- a/blog/references.bib
+++ b/blog/references.bib
@@ -33,3 +33,42 @@
   abstract = {Today the internet virtually consumes all of our lives (especially the lives of writers). As both readers and writers, we are all aware of blogs, chat rooms, and preprint servers. There are now electronic-only journals and print-on-demand books, Open Access journals and joint research projects such as MathOverflow—not to mention a host of other new realities. It truly is a brave new world, one that can be overwhelming and confusing. The truly new feature of this second edition is an extensive discussion of technological developments. Similar to the first edition, Krantz's frank and straightforward approach makes this book particularly suitable as a textbook for an undergraduate course.}
 }
 
+@MISC{brainhayes,
+   author = "Hayes, Brian",
+   title = "Writing Math on the Web",
+   publisher = "Amercian Scientist",
+   month = "02",
+   year = "2017",
+   howpublished = {\url{https://www.americanscientist.org/article/writing-math-on-the-web}},
+   note = "[Online; posted 06-Febuary-2017]",
+ }
+
+@inproceedings{Davide,
+author = {Cervone, Davide and Krautzberger, Peter and Sorge, Volker},
+title = {Towards Universal Rendering in MathJax},
+year = {2016},
+isbn = {9781450341387},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2899475.2899494},
+doi = {10.1145/2899475.2899494},
+abstract = {Mathematics support on the web is currently very limited mainly due to the lack of browser support for the dedicated markup language MathML. While for visual display JavaScript libraries like MathJax can ensure flawless rendering of formulas across all platforms and browsers, there currently exists no system independent assistive technology solutions for Mathematics. We report on the attempt to transform MathJax into a universal rendering solution, providing accessibility also for readers with visual, print, and motor impairments. As our goal is to integrate seamlessly with other assistive technology solutions, we are faced with a number of technical challenges to provide a consistent user experience, regardless of the particular combination of platform, browser, and screen reader employed by readers. This paper presents MathJax's accessibility features and some of the technical challenges to motivate a wish-list for future standards to enhance web accessibility for STEM content.},
+booktitle = {Proceedings of the 13th International Web for All Conference},
+articleno = {4},
+numpages = {4},
+keywords = {MathJax, STEM accessibility, mathematics},
+location = {Montreal, Canada},
+series = {W4A '16}
+}
+
+@article{cervone2012mathjax,
+  title={MathJax: a platform for mathematics on the Web},
+  author={Cervone, Davide},
+  journal={Notices of the AMS},
+  volume={59},
+  number={2},
+  pages={312--316},
+  year={2012}
+}
+
+
