--- a/blog/references.bib
+++ b/blog/references.bib
@@ -43,6 +43,19 @@
    note = "[Online; posted 06-Febuary-2017]",
  }
 
+
+@MISC{aust,
+   author = "Aust, F. \& Bruer, J.",
+   title = "Workshop on reproducible research practices for psychologists",
+   publisher = "Frederik Aust",
+   month = "04",
+   year = "2022",
+   howpublished = {\url{https://github.com/crsh/reproducible-research-practices-workshop}},
+   note = "[Online; posted 04-March-2022]",
+ }
+
+
+
 @inproceedings{Davide,
 author = {Cervone, Davide and Krautzberger, Peter and Sorge, Volker},
 title = {Towards Universal Rendering in MathJax},
@@ -70,5 +83,62 @@ series = {W4A '16}
   pages={312--316},
   year={2012}
 }
+
+@ARTICLE{Millman2011,
+  author={Millman, K. Jarrod and Aivazis, Michael},
+  journal={Computing in Science \& Engineering}, 
+  title={Python for Scientists and Engineers}, 
+  year={2011},
+  volume={13},
+  number={2},
+  pages={9-12},
+  doi={10.1109/MCSE.2011.36}
+  }
+
+@INPROCEEDINGS{Arepalli2022,
+  author={Arepalli, Venkata Sai Pavan and Sekharan, Chandra N},
+  booktitle={2022 IEEE 13th Annual Ubiquitous Computing, Electronics \& Mobile Communication Conference (UEMCON)}, 
+  title={Performance Benchmarking of PyScript and Comparative Results with Javascript}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={0084-0087},
+  abstract={In the last two decades that there has been an explosion in the use of web applications. Given the ever-expanding number of web and mobile apps, extensive work has been done in developing and using efficient core technologies to support the performance goals of the apps. In particular, front-end developer languages such as Javascript are highly popular. In this paper, we perform a detailed study of the recently introduced Python-based web development framework PyScript and evaluate the performance of PyScript in comparison with Javascript using standard benchmarks. The research contributions of this work are in the benchmarking of code in three different categories (i) DOM manipulation, (ii) Operations involving the network layer, and (iii)cpu-intensive computations. The benchmarks come from one of the standards and carefully implemented to perform a comparative evaluation. Results show that native Javascript code runs faster on all DOM and networking sets of benchmarks by a factor of 1.5 to 5 when compared with PyScript, with the exception of two of the networking benchmarks. It is in the computationally intensive benchmarks that Javascript trumps PyScript by a factor of 25 to 35 depending the algorithm. We offer architectural insights into performance issues and conclude with directions on further research.},
+  keywords={},
+  doi={10.1109/UEMCON54665.2022.9965680},
+  ISSN={},
+  month={Oct}
+}
+
+@article{krewinkel2017formatting,
+  title={Formatting Open Science: agilely creating multiple document formats for academic manuscripts with Pandoc Scholar},
+  author={Krewinkel, Albert and Winkler, Robert},
+  journal={PeerJ computer science},
+  volume={3},
+  pages={e112},
+  year={2017},
+  publisher={PeerJ Inc.}
+}
+
+@article{mailund2019introducing,
+  title={Introducing Markdown and Pandoc},
+  author={Mailund, Thomas},
+  journal={Berkeley, CA: Apress},
+  volume={1},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{hata2022github,
+  title={GitHub Discussions: An exploratory study of early adoption},
+  author={Hata, Hideaki and Novielli, Nicole and Baltes, Sebastian and Kula, Raula Gaikovina and Treude, Christoph},
+  journal={Empirical Software Engineering},
+  volume={27},
+  pages={1--32},
+  year={2022},
+  publisher={Springer},
+  abstract ={Discussions is a new feature of GitHub for asking questions or discussing topics outside of specific Issues or Pull Requests. Before being available to all projects in December 2020, it had been tested on selected open source software projects. To understand how developers use this novel feature, how they perceive it, and how it impacts the development processes, we conducted a mixed-methods study based on early adopters of GitHub discussions from January until July 2020.}
+}
+
 
 
