--- a/blog/writing-the-preface/index.tex
+++ b/blog/writing-the-preface/index.tex
@@ -243,7 +243,7 @@ establishing tone, introducing yourself as an author, outlining any
 goals you have for the work and highlighting key topics that are
 discussed.
 \end{abstract}
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, frame hidden, interior hidden, enhanced, breakable, sharp corners, boxrule=0pt]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, frame hidden, interior hidden, borderline west={3pt}{0pt}{shadecolor}, enhanced, boxrule=0pt, sharp corners]}{\end{tcolorbox}}\fi
 
 
 
