--- a/blog/writing-the-preface/index.tex
+++ b/blog/writing-the-preface/index.tex
@@ -243,7 +243,7 @@ establishing tone, introducing yourself as an author, outlining any
 goals you have for the work and highlighting key topics that are
 discussed.
 \end{abstract}
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, breakable, boxrule=0pt, enhanced, sharp corners, borderline west={3pt}{0pt}{shadecolor}, frame hidden]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, interior hidden, boxrule=0pt, frame hidden, enhanced, sharp corners, breakable]}{\end{tcolorbox}}\fi
 
 
 
