--- a/hardcover.tex
+++ b/hardcover.tex
@@ -249,7 +249,7 @@ twoside
 
 \title{Direct Knowledge}
 \author{David A. Smith}
-\date{3/2/23}
+\date{}
 
 \begin{document}
 \frontmatter
@@ -304,7 +304,7 @@ Typeset with \LaTeX \, and written in the United States of America.
 
 
 
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, enhanced, frame hidden, sharp corners, interior hidden, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, borderline west={3pt}{0pt}{shadecolor}, breakable, boxrule=0pt, enhanced, frame hidden, sharp corners]}{\end{tcolorbox}}\fi
 
 \mainmatter
 \bookmarksetup{startatroot}
@@ -314,16 +314,6 @@ Typeset with \LaTeX \, and written in the United States of America.
 \addcontentsline{toc}{chapter}{Preface}
 
 \markboth{Preface}{Preface}
-
-\bookmarksetup{startatroot}
-
-\hypertarget{introduction}{%
-\chapter{Introduction}\label{introduction}}
-
-\bookmarksetup{startatroot}
-
-\hypertarget{summary}{%
-\chapter{Summary}\label{summary}}
 
 \bookmarksetup{startatroot}
 
